WIP react upgrade

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
      FOR A PARTICULAR PURPOSE. See the License for more details.
 
      You should have received a copy of the License along with this program; if
-     not, you can obtain one from Tidepool Project at tidepool.org.
+     not(,, you) can obtain one from Tidepool Project at tidepool.org.
      == BSD2 LICENSE == -->
 
 <!DOCTYPE html>
